--- a/driver-adapters/pg-vercel-nextjs-edgemw/package.json
+++ b/driver-adapters/pg-vercel-nextjs-edgemw/package.json
@@ -12,6 +12,7 @@
     "@jest/globals": "29.7.0",
     "@types/pg": "^8.10.2",
     "jest": "28.1.3",
+    "pg-cloudflare": "1.1.1",
     "prisma": "5.7.0-dev.47",
     "vercel": "32.3.1"
   },
