add entry to yaml

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1196,6 +1196,7 @@ jobs:
           - turso-node-basic
           - turso-node-basic-esm
           - turso-vercel-nextjs
+          - turso-vercel-nextjs-edgemw
         clientEngine: ['library']
         os: [ubuntu-20.04]
     runs-on: ${{ matrix.os }}
