feat: driver-adapters/pg-node-basic-wasm

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1186,6 +1186,7 @@ jobs:
           - pg-cf-basic
           - pg-lambda-basic
           - pg-node-basic
+          - pg-node-basic-wasm
           - pg-node-basic-esm
           - pg-vercel-nextjs
           - turso-cf-basic
