also edge import

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1187,6 +1187,7 @@ jobs:
           - pg-lambda-basic
           - pg-node-basic
           - pg-node-basic-wasm
+          - pg-node-basic-wasm-edge-import
           - pg-node-basic-esm
           - pg-vercel-nextjs
           - turso-cf-basic
