adapt edge import test

--- a/driver-adapters-wasm/pg-node-basic-wasm-edge-import/package.json
+++ b/driver-adapters-wasm/pg-node-basic-wasm-edge-import/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "pg-node-basic-wasm",
+  "name": "pg-node-basic-wasm-edge-import",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "test": "jest index.test.js"
+    "test": "NODE_OPTIONS=--experimental-vm-modules jest index.test.mjs"
   },
   "devDependencies": {
     "@jest/globals": "29.7.0",
