--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -76,6 +76,16 @@ jobs:
       - id: detect
         run: ./.github/workflows/scripts/detect-jobs-to-run.js <<<'${{ steps.files.outputs.all }}'
 
+  debug_detect_jobs_to_run:
+    needs: [detect_jobs_to_run]
+    name: Debug detected jobs to run  
+    runs-on: ubuntu-20.04
+    steps:
+      - run: echo ${{ github.job }}
+      - run: echo ${{ needs.detect_jobs_to_run.outputs.jobs }}
+      - run: echo ${{ fromJSON(needs.detect_jobs_to_run.outputs.jobs) }}
+      - run: echo ${{ contains(fromJSON(needs.detect_jobs_to_run.outputs.jobs), github.job) }}
+
   confirm_all_jobs_have_run:
     name: Confirm all jobs have run
     runs-on: ubuntu-20.04
