--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -79,7 +79,7 @@ jobs:
   debug_detect_jobs_to_run:
     needs: [detect_jobs_to_run]
     name: Debug detected jobs to run  
-    if: contains(fromJSON(needs.detect_jobs_to_run.outputs.jobs), github.job)
+    if: ${{ contains(fromJSON(needs.detect_jobs_to_run.outputs.jobs), github.job) }}
     runs-on: ubuntu-20.04
     steps:
       - name: Job name
