--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -243,7 +243,7 @@ jobs:
 
   docker:
     needs: [detect_jobs_to_run]
-    if: contains(fromJSON(needs.detect_jobs_to_run.outputs.jobs), github.job)
+    if: contains(fromJSON(needs.detect_jobs_to_run.outputs.jobs), 'docker')
 
     strategy:
       fail-fast: false
@@ -340,7 +340,7 @@ jobs:
   # Meaning a successfull run actually shows a non zero exit code in the logs
   docker-unsupported:
     needs: [detect_jobs_to_run]
-    if: contains(fromJSON(needs.detect_jobs_to_run.outputs.jobs), github.job)
+    if: contains(fromJSON(needs.detect_jobs_to_run.outputs.jobs), 'docker-unsupported')
 
     strategy:
       fail-fast: false
@@ -394,7 +394,7 @@ jobs:
 
   core-features:
     needs: [detect_jobs_to_run]
-    if: contains(fromJSON(needs.detect_jobs_to_run.outputs.jobs), github.job)
+    if: contains(fromJSON(needs.detect_jobs_to_run.outputs.jobs), 'core-features')
 
     strategy:
       fail-fast: false
@@ -475,7 +475,7 @@ jobs:
 
   migrate:
     needs: [detect_jobs_to_run]
-    if: contains(fromJSON(needs.detect_jobs_to_run.outputs.jobs), github.job)
+    if: contains(fromJSON(needs.detect_jobs_to_run.outputs.jobs), 'migrate')
 
     strategy:
       fail-fast: false
@@ -526,7 +526,7 @@ jobs:
 
   engines:
     needs: [detect_jobs_to_run]
-    if: contains(fromJSON(needs.detect_jobs_to_run.outputs.jobs), github.job)
+    if: contains(fromJSON(needs.detect_jobs_to_run.outputs.jobs), 'engines')
 
     strategy:
       fail-fast: false
@@ -573,7 +573,7 @@ jobs:
 
   os:
     needs: [detect_jobs_to_run]
-    if: contains(fromJSON(needs.detect_jobs_to_run.outputs.jobs), github.job)
+    if: contains(fromJSON(needs.detect_jobs_to_run.outputs.jobs), 'os')
 
     strategy:
       fail-fast: false
@@ -625,7 +625,7 @@ jobs:
   # so as a workaround we test this version with npm
   node16dot13:
     needs: [detect_jobs_to_run]
-    if: contains(fromJSON(needs.detect_jobs_to_run.outputs.jobs), github.job)
+    if: contains(fromJSON(needs.detect_jobs_to_run.outputs.jobs), 'node16dot13')
 
     strategy:
       fail-fast: false
@@ -677,7 +677,7 @@ jobs:
 
   node:
     needs: [detect_jobs_to_run]
-    if: contains(fromJSON(needs.detect_jobs_to_run.outputs.jobs), github.job)
+    if: contains(fromJSON(needs.detect_jobs_to_run.outputs.jobs), 'node')
 
     strategy:
       fail-fast: false
@@ -736,7 +736,7 @@ jobs:
 
   binaries:
     needs: [detect_jobs_to_run]
-    if: contains(fromJSON(needs.detect_jobs_to_run.outputs.jobs), github.job)
+    if: contains(fromJSON(needs.detect_jobs_to_run.outputs.jobs), 'binaries')
 
     strategy:
       fail-fast: false
@@ -790,7 +790,7 @@ jobs:
 
   packagers:
     needs: [detect_jobs_to_run]
-    if: contains(fromJSON(needs.detect_jobs_to_run.outputs.jobs), github.job)
+    if: contains(fromJSON(needs.detect_jobs_to_run.outputs.jobs), 'packagers')
 
     strategy:
       fail-fast: false
@@ -867,7 +867,7 @@ jobs:
 
   frameworks:
     needs: [detect_jobs_to_run]
-    if: contains(fromJSON(needs.detect_jobs_to_run.outputs.jobs), github.job)
+    if: contains(fromJSON(needs.detect_jobs_to_run.outputs.jobs), 'frameworks')
 
     strategy:
       fail-fast: false
@@ -921,7 +921,7 @@ jobs:
 
   platforms:
     needs: [detect_jobs_to_run]
-    if: contains(fromJSON(needs.detect_jobs_to_run.outputs.jobs), github.job)
+    if: contains(fromJSON(needs.detect_jobs_to_run.outputs.jobs), 'platforms')
 
     timeout-minutes: 60
     strategy:
@@ -996,7 +996,7 @@ jobs:
 
   platforms-serverless:
     needs: [detect_jobs_to_run]
-    if: contains(fromJSON(needs.detect_jobs_to_run.outputs.jobs), github.job)
+    if: contains(fromJSON(needs.detect_jobs_to_run.outputs.jobs), 'platforms-serverless')
 
     timeout-minutes: 60 # can take longer if platforms are down, so better protect
     strategy:
@@ -1093,7 +1093,7 @@ jobs:
 
   platforms-serverless-vercel:
     needs: [detect_jobs_to_run]
-    if: contains(fromJSON(needs.detect_jobs_to_run.outputs.jobs), github.job)
+    if: contains(fromJSON(needs.detect_jobs_to_run.outputs.jobs), 'platforms-serverless-vercel')
 
     timeout-minutes: 60 # can take longer if platforms are down, so better protect
     strategy:
@@ -1177,7 +1177,7 @@ jobs:
 
   driver-adapters:
     needs: [detect_jobs_to_run]
-    if: contains(fromJSON(needs.detect_jobs_to_run.outputs.jobs), github.job)
+    if: contains(fromJSON(needs.detect_jobs_to_run.outputs.jobs), 'driver-adapters')
 
     timeout-minutes: 30
     strategy:
@@ -1301,7 +1301,7 @@ jobs:
   # it would be great if we could run them in parallel by letting them use the db provided by E2E
   dataproxy:
     needs: [detect_jobs_to_run]
-    if: contains(fromJSON(needs.detect_jobs_to_run.outputs.jobs), github.job)
+    if: contains(fromJSON(needs.detect_jobs_to_run.outputs.jobs), 'dataproxy')
 
     timeout-minutes: 60 # can take longer if platforms are down, so better protect
     strategy:
@@ -1430,7 +1430,7 @@ jobs:
 
   bundlers:
     needs: [detect_jobs_to_run]
-    if: contains(fromJSON(needs.detect_jobs_to_run.outputs.jobs), github.job)
+    if: contains(fromJSON(needs.detect_jobs_to_run.outputs.jobs), 'bundlers')
 
     strategy:
       fail-fast: false
@@ -1485,7 +1485,7 @@ jobs:
 
   libraries:
     needs: [detect_jobs_to_run]
-    if: contains(fromJSON(needs.detect_jobs_to_run.outputs.jobs), github.job)
+    if: contains(fromJSON(needs.detect_jobs_to_run.outputs.jobs), 'libraries')
 
     strategy:
       fail-fast: false
@@ -1539,7 +1539,7 @@ jobs:
 
   databases:
     needs: [detect_jobs_to_run]
-    if: contains(fromJSON(needs.detect_jobs_to_run.outputs.jobs), github.job)
+    if: contains(fromJSON(needs.detect_jobs_to_run.outputs.jobs), 'databases')
 
     strategy:
       fail-fast: false
@@ -1627,7 +1627,7 @@ jobs:
 
   databases-macos:
     needs: [detect_jobs_to_run]
-    if: contains(fromJSON(needs.detect_jobs_to_run.outputs.jobs), github.job)
+    if: contains(fromJSON(needs.detect_jobs_to_run.outputs.jobs), 'databases-macos')
 
     strategy:
       fail-fast: false
@@ -1674,7 +1674,7 @@ jobs:
 
   test-runners:
     needs: [detect_jobs_to_run]
-    if: contains(fromJSON(needs.detect_jobs_to_run.outputs.jobs), github.job)
+    if: contains(fromJSON(needs.detect_jobs_to_run.outputs.jobs), 'test-runners')
 
     strategy:
       fail-fast: false
