--- a/.github/workflows/optional-test.yaml
+++ b/.github/workflows/optional-test.yaml
@@ -63,7 +63,7 @@ jobs:
       - name: Install Dependencies
         run: pnpm install
       - id: detect
-        run: ./.github/workflows/detect-jobs-to-run.js <<<'${{ steps.files.outputs.all }}'
+        run: ./.github/workflows/scripts/detect-jobs-to-run.js <<<'${{ steps.files.outputs.all }}'
 
   report-to-slack-success:
     runs-on: ubuntu-22.04
@@ -105,7 +105,7 @@ jobs:
 
   community-generators:
     needs: [detect_jobs_to_run]
-    if: ${{ fromJson(needs.detect_jobs_to_run.outputs.jobs)['community-generators'] == true }}
+    if: contains(fromJSON(needs.detect_jobs_to_run.outputs.jobs), 'community-generators')
 
     strategy:
       fail-fast: false
