--- a/driver-adapters-wasm/pg-node-basic-esm/package.json
+++ b/driver-adapters-wasm/pg-node-basic-esm/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pg-node-basic-wasm-edge-import",
+  "name": "pg-node-basic-esm",
   "version": "0.1.0",
   "private": true,
   "scripts": {
